mega fixing. poker internal version 2.2.0
commits:
 * 5522feb more translations..
 * fd4d9e0 moremoremore
 * e872630 typos
 * 202c319 more tests, updated xml to 2.2.0
 * 8c1b366 more tests
 * f9e7a56 added 2.2.0 db version
 * c9363cf if no db version is available, use 1.0.5, needed for reconstruction of upgradeChain
 * 1cb2470 more test fixing
 * 6aa8e51 more translation fixes yeahyeah
 * a7d6cf8 fixed munin obsolete warnings
 * 9f1dd7a more test fixing
 * ba92f7b switched to proto and database 2.2.0
 * 4e33df0 use Packet.JSON when possible
 * a63fc3e removed to/fromutf8 and __walk
 * 7fb4c31 use gettext instead of ugettext. this will ensure utf8 encoded 8bit strings
 * 0d00912 updated and corrected pokergame translations and po files
 * ca74954 spacing
 * 6abc553 updated po files
 * f5818d4 Revert "switched back to gettext for master"
 * 76d0946 Revert "Revert "de.po with utf8 umlauts" (should not yet be in master)"
 * a50a96d changing default pokeravatar encoding to utf 8
 * 4c6c569 switch config xmls and config language directives to utf8

--- a/database/schema.sql.in
+++ b/database/schema.sql.in
@@ -48,9 +48,9 @@ CREATE TABLE users (
   -- client interpreted URL from which the player avatar can be downloaded
   skin_url VARCHAR(255) DEFAULT "random" NOT NULL,
   -- client interpreted textual description of the player aspect
-  skin_outfit TEXT NOT NULL,
+  skin_outfit TEXT,
   -- base64 encoded player picture of type skin_image_type
-  skin_image TEXT NOT NULL,
+  skin_image TEXT,
   -- the type of the base64 encoded skin_image field content
   skin_image_type VARCHAR(32) DEFAULT "image/png",
   -- clear text password matching the regexp ^[a-zA-Z0-9]{5,15}$
@@ -106,10 +106,10 @@ DROP TABLE IF EXISTS currencies;
 
 CREATE TABLE currencies (
   serial INT NOT NULL AUTO_INCREMENT UNIQUE,
-  url CHAR(255) NOT NULL UNIQUE,
-  symbol CHAR(8) NOT NULL,
-  name CHAR(32) NOT NULL,
-  cash_out INT,
+  url VARCHAR(255) NOT NULL UNIQUE,
+  symbol VARCHAR(8) DEFAULT '' NOT NULL,
+  name VARCHAR(32) DEFAULT '' NOT NULL,
+  cash_out INT DEFAULT 0 NOT NULL,
 
   PRIMARY KEY (serial, url)
 )  ENGINE=InnoDB CHARSET=utf8;
