--- a/pokerstats/poker.stats.xml.in
+++ b/pokerstats/poker.stats.xml.in
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="stats.xsd" ping="10" verbose="0" percentiles="4.0" poker_network_version="2.0.0">
 
   <server host="127.0.0.1" port="19380">
