--- a/pokerstats/test-stats.py.in
+++ b/pokerstats/test-stats.py.in
@@ -49,7 +49,7 @@ from pokernetwork import pokerclient
 from pokernetwork.pokerclientpackets import *
 from pokerstats import stats, statslogic
 
-settings_xml_server = """<?xml version="1.0" encoding="ISO-8859-1"?>
+settings_xml_server = """<?xml version="1.0" encoding="UTF-8"?>
 <server verbose="6" ping="300000" autodeal="yes" simultaneous="4" chat="yes" >
   <delays autodeal="20" round="0" position="0" showdown="0" autodeal_max="1" finish="0" messages="60" />
 
@@ -63,7 +63,7 @@ settings_xml_server = """<?xml version="1.0" encoding="ISO-8859-1"?>
 </server>
 """
 
-settings_xml_stats = """<?xml version="1.0" encoding="ISO-8859-1"?>
+settings_xml_stats = """<?xml version="1.0" encoding="UTF-8"?>
 <settings ping="15000" verbose="6" delays="true" poll_frequency="0.1" percentiles="5.0">
   <server host="127.0.0.1" port="19480" >
     <database name="pokernetworktest" host="localhost" user="pokernetworktest" password="pokernetwork"
@@ -75,7 +75,7 @@ settings_xml_stats = """<?xml version="1.0" encoding="ISO-8859-1"?>
 </settings>
 """
 
-settings_xml_stats_no_percentiles = """<?xml version="1.0" encoding="ISO-8859-1"?>
+settings_xml_stats_no_percentiles = """<?xml version="1.0" encoding="UTF-8"?>
 <settings ping="15000" verbose="6" delays="true" poll_frequency="0.1" >
   <server host="127.0.0.1" port="19480" >
     <database name="pokernetworktest" host="localhost" user="pokernetworktest" password="pokernetwork"
