--- a/tests/test-pokerserver-run-load.py.in
+++ b/tests/test-pokerserver-run-load.py.in
@@ -28,7 +28,7 @@ from twisted.internet import reactor, defer
 
 from cStringIO import StringIO
 
-settings_xml_server_open_options = """<?xml version="1.0" encoding="ISO-8859-1"?>
+settings_xml_server_open_options = """<?xml version="1.0" encoding="UTF-8"?>
 <server verbose="6" ping="300000" autodeal="yes" simultaneous="4" chat="yes" >
   <delays autodeal="20" round="0" position="0" showdown="0" autodeal_max="1" finish="0" messages="60" />
 
