--- a/tests/test-pokerserver.py.in
+++ b/tests/test-pokerserver.py.in
@@ -52,7 +52,7 @@ os.environ['LOG_LEVEL'] = '10'
 
 verbose = int(os.environ.get('VERBOSE_T', '-1'))
 
-settings_xml_server_manhole = """<?xml version="1.0" encoding="ISO-8859-1"?>
+settings_xml_server_manhole = """<?xml version="1.0" encoding="UTF-8"?>
 <server verbose="6" ping="300000" autodeal="yes" simultaneous="4" chat="yes" >
   <delays autodeal="20" round="0" position="0" showdown="0" autodeal_max="1" finish="0" messages="60" />
 
@@ -108,7 +108,7 @@ X/Yg2xDQ1W9Mev0q5hDhAkBKSJF0V/24bz27z1yUSzHRHO3FAKXepkR81g6IRl41
 r9nOQTOBo04TLBXtyP+o7GFNzBjEm6fVaqwk5SVsdQ+t
 -----END RSA PRIVATE KEY-----
 """
-settings_xml_server_open_options = """<?xml version="1.0" encoding="ISO-8859-1"?>
+settings_xml_server_open_options = """<?xml version="1.0" encoding="UTF-8"?>
 <server verbose="6" ping="300000" autodeal="yes" simultaneous="4" chat="yes" >
   <delays autodeal="20" round="0" position="0" showdown="0" autodeal_max="1" finish="0" messages="60" />
 
