--- a/conf/poker.server.xml.in
+++ b/conf/poker.server.xml.in
@@ -1,49 +1,47 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!-- 
    session_timeout must be higher than ping
    cookie_timeout must be greater than session_timeout
    if a PHPSESSID is involved (auth module) cookie_timeout must be 
       greater than PHPSESSID timeout
  -->
-<server xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="server.xsd" ping="20" autodeal="yes" max_joined="4000" max_queued_client_packets="500" cleanup="yes" simultaneous="4" max_missed_round="5" verbose="0" chat="yes" memcached="127.0.0.1:11211" session_timeout="60" cookie_timeout="1200" sng_timeout="3600" long_poll_timeout="20" remove_completed="1" admin="false" chunk_size="0" poker_network_version="2.0.0">
+<server xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="server.xsd" ping="20" autodeal="yes" max_joined="4000" max_queued_client_packets="500" cleanup="yes" simultaneous="4" max_missed_round="5" verbose="0" chat="yes" memcached="127.0.0.1:11211" session_timeout="60" cookie_timeout="1200" sng_timeout="3600" long_poll_timeout="20" remove_completed="1" admin="false" chunk_size="0" poker_network_version="2.2.0">
 
 <!-- max_queued_client_packets defaults to 500 if you leave it out.
      max_missed_round defaults to 10 if you leave it out.
      max_joined defaults to 4000 if you leave it out.  -->
 
-  <language value="en.ISO-8859-1"/>
-  <language value="en_US.ISO-8859-1"/>
-  <language value="en_GB.ISO-8859-1"/>
-  <language value="en_CA.ISO-8859-1"/>
-  <language value="fr_FR.ISO-8859-1"/>
-  <language value="fr.ISO-8859-1"/>
-  <language value="fr_FX.ISO-8859-1"/>
-  <language value="fr_BE.ISO-8859-1"/>
-  <language value="fr_CA.ISO-8859-1"/>
-  <language value="de.ISO-8859-1"/>
-  <language value="de_DE.ISO-8859-1"/>
-  <language value="es.ISO-8859-1"/>
-  <language value="es_ES.ISO-8859-1"/>
-  <language value="nl.ISO-8859-1"/>
-  <language value="nl_NL.ISO-8859-1"/>
-  <language value="it.ISO-8859-1"/>
-  <language value="it_IT.ISO-8859-1"/>
-  <language value="pt.ISO-8859-1"/>
-  <language value="pt_PT.ISO-8859-1"/>
-  <language value="da.ISO-8859-1"/>
-  <language value="da_DK.ISO-8859-1"/>
-  <language value="fi.ISO-8859-1"/>
-  <language value="fi_FI.ISO-8859-1"/>
-  <language value="nb.ISO-8859-1"/>
-  <language value="nb_NO.ISO-8859-1"/>
-  <language value="sv.ISO-8859-1"/>
-  <language value="sv_SE.ISO-8859-1"/>
+  <language value="en.UTF-8"/>
+  <language value="en_US.UTF-8"/>
+  <language value="en_GB.UTF-8"/>
+  <language value="en_CA.UTF-8"/>
+  <language value="fr_FR.UTF-8"/>
+  <language value="fr.UTF-8"/>
+  <language value="fr_FX.UTF-8"/>
+  <language value="fr_BE.UTF-8"/>
+  <language value="fr_CA.UTF-8"/>
+  <language value="de.UTF-8"/>
+  <language value="de_DE.UTF-8"/>
+  <language value="es.UTF-8"/>
+  <language value="es_ES.UTF-8"/>
+  <language value="nl.UTF-8"/>
+  <language value="nl_NL.UTF-8"/>
+  <language value="it.UTF-8"/>
+  <language value="it_IT.UTF-8"/>
+  <language value="pt.UTF-8"/>
+  <language value="pt_PT.UTF-8"/>
+  <language value="da.UTF-8"/>
+  <language value="da_DK.UTF-8"/>
+  <language value="fi.UTF-8"/>
+  <language value="fi_FI.UTF-8"/>
+  <language value="nb.UTF-8"/>
+  <language value="nb_NO.UTF-8"/>
+  <language value="sv.UTF-8"/>
+  <language value="sv_SE.UTF-8"/>
 
 <!-- language settings above are for client-side localization support, set
-     via the PacketPokerSetLocale().  Note that *only* ISO-8859-1 codesets
-     are currently supported!  If you use ISO-8859-1 codsets, clients
-     using the JSON interface (and perhaps even the packet interface) will
-     receive *incorrectly encoded* strings.  -->
+     via the PacketPokerSetLocale().  Note that *only* UTF-8 codesets
+	 are currently supported! -->
 
   <stats type="RankPercentile"/>
 
