--- a/pokerprizes/test-prizes.py.in
+++ b/pokerprizes/test-prizes.py.in
@@ -49,7 +49,7 @@ from pokernetwork.pokerpackets import *
 from pokerprizes.prizes import PokerPrizes
 from pokerprizes.tourneyselectinfo import Handle
 
-settings_xml_server = """<?xml version="1.0" encoding="ISO-8859-1"?>
+settings_xml_server = """<?xml version="1.0" encoding="UTF-8"?>
 <server verbose="6" ping="300000" autodeal="yes" simultaneous="4" chat="yes" >
   <delays autodeal="20" round="0" position="0" showdown="0" autodeal_max="1" finish="0" messages="60" />
 
@@ -89,7 +89,7 @@ class PokerPrizesTestCase(Base):
     def test01_create(self):
         service = pokerservice.PokerService(self.settings)
         service.db = self.db
-        xml = """<?xml version="1.0" encoding="ISO-8859-1"?>
+        xml = """<?xml version="1.0" encoding="UTF-8"?>
 <settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="prizes.xsd" poker_network_version="1.7.4" tourneys_schedule2prizes="tourneys_schedule2prizes" prizes="prizes" schema="@srcdir@/../../pokerprizes/schema.sql" />
 """
         prizes = PokerPrizes(service, xml)
@@ -101,7 +101,7 @@ class PokerPrizesTestCase(Base):
     def test02_settings(self):
         service = pokerservice.PokerService(self.settings)
         service.db = self.db
-        xml = """<?xml version="1.0" encoding="ISO-8859-1"?>
+        xml = """<?xml version="1.0" encoding="UTF-8"?>
 <settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="prizes.xsd" poker_network_version="1.7.4" tourneys_schedule2prizes="tourneys_schedule2prizes" prizes="prizes" schema="@srcdir@/../../pokerprizes/schema.sql" />
 """
         settings = pokernetworkconfig.Config([])
@@ -117,7 +117,7 @@ class TourneySelectInfoTestCase(Base):
     def test01_select(self):
         service = pokerservice.PokerService(self.settings)
         service.db = self.db
-        xml = """<?xml version="1.0" encoding="ISO-8859-1"?>
+        xml = """<?xml version="1.0" encoding="UTF-8"?>
 <settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="prizes.xsd" poker_network_version="1.7.4" tourneys_schedule2prizes="tourneys_schedule2prizes" prizes="prizes" schema="@srcdir@/../../pokerprizes/schema.sql" />
 """
         prizes = Handle(service, xml)
