--- a/tests/run.in
+++ b/tests/run.in
@@ -131,7 +131,7 @@ case "$1" in
 *.php) 
         file=$(basename $1)
         mkdir -p phpunit/$file
-        @PHP@ -d zend_extension=$(pecl config-get ext_dir)/xdebug.so @PHPUNIT@ --report phpunit/$file $(basename $file .php)
+        @PHP@ @PHPUNIT@ --coverage-text=phpunit/$file $(basename $file .php)
         ;;
 
 
