--- a/tests/test-clientserver.py.in
+++ b/tests/test-clientserver.py.in
@@ -175,7 +175,7 @@ class ClientServer(ClientServerTestBase):
     def ping(self, client):
         clear_all_messages()
         client.sendPacket(PacketPing())
-        self.assertEquals(get_messages(), ["sendPacket: type = PING(5)"])
+        self.assertEquals(get_messages(), ["sendPacket: PING  type = 5 length = 3"])
         return (client,)
     # -----------------------------------------------------------------------        
     def setPrefix(self, client):
@@ -282,7 +282,7 @@ class ClientServer(ClientServerTestBase):
         def bufferPackets(client):
             def checkOutput(client):
                 msgs = get_messages()
-                self.assertEquals(msgs[0], 'sendPacket: type = ACK(4)')
+                self.assertEquals(msgs[0], 'sendPacket: ACK  type = 4 length = 3')
                 return (client,)
 
             client.bufferized_packets = [ PacketAck() ]
@@ -299,8 +299,8 @@ class ClientServer(ClientServerTestBase):
         def bufferPackets(client):
             def checkOutput(client):
                 msgs = get_messages()
-                self.assertEquals(msgs[0], 'sendPacket: type = ACK(4)')
-                self.assertEquals(msgs[1], 'sendPacket: type = SERIAL(6) serial = 0')
+                self.assertEquals(msgs[0], 'sendPacket: ACK  type = 4 length = 3')
+                self.assertEquals(msgs[1], 'sendPacket: SERIAL  type = 6 length = 7 serial = 0')
                 return (client,)
 
             client.bufferized_packets = [ PacketAck(), PacketSerial() ]
@@ -356,7 +356,7 @@ class ClientServerQueuedServerPackets(ClientServerTestBase):
         self.failUnless(search_output('protocol established'))
         clear_all_messages()
         def findBufferedAckPacket(client):
-            self.failUnless(search_output("(3 bytes) => type = ACK(4)"))
+            self.failUnless(search_output("ACK  type = 4 length = 3"))
 
         d = client.connection_lost_deferred
         d.addCallback(findBufferedAckPacket)
@@ -379,7 +379,7 @@ class ClientServerDeferredServerPackets(ClientServerTestBase):
         self.assertEquals(get_messages(), [])
         
         def callbackDeferredPacket(client):
-            self.assertTrue(search_output('(3 bytes) => type = ACK(4)'))
+            self.assertTrue(search_output('ACK  type = 4 length = 3'))
             
         d = client.connection_lost_deferred
         d.addCallback(callbackDeferredPacket)
@@ -407,7 +407,7 @@ class ClientServerDeferredServerPackets(ClientServerTestBase):
                 if msg == "(132 bytes) => type = ERROR(3) message = [Failure instance: Traceback (failure with no frames): <class 'twisted.python.failure.DefaultException'>: forced to fail\n], code = 0, other_type = ERROR":
                     self.failIf(errFound or ackFound)
                     errFound = True
-                elif msg == '(3 bytes) => type = ACK(4)':
+                elif msg == 'ACK  type = 4 length = 3':
                     self.failUnless(errFound)
                     ackFound = True
             self.failUnless(ackFound and errFound)
