--- a/tests/test-leak.py.in
+++ b/tests/test-leak.py.in
@@ -54,7 +54,7 @@ from pokernetwork import pokerservice
 from pokernetwork import proxyfilter
 from pokernetwork.pokerpackets import *
 
-settings_xml_server = """<?xml version="1.0" encoding="ISO-8859-1"?>
+settings_xml_server = """<?xml version="1.0" encoding="UTF-8"?>
 <server verbose="6" ping="300000" autodeal="yes" simultaneous="4" chat="yes" >
   <delays autodeal="20" round="0" position="0" showdown="0" autodeal_max="1" finish="0" messages="60" />
 
