--- a/tests/test-pokerclient.py.in
+++ b/tests/test-pokerclient.py.in
@@ -76,7 +76,7 @@ class ConstantPlayerShuffler:
 
 pokertournament.shuffler = ConstantPlayerShuffler()
 
-settings_xml_server = """<?xml version="1.0" encoding="ISO-8859-1"?>
+settings_xml_server = """<?xml version="1.0" encoding="UTF-8"?>
 <server verbose="6" ping="300000" autodeal="yes" simultaneous="4" chat="yes" >
   <delays autodeal="20" round="0" position="0" showdown="0" autodeal_max="1" finish="0" messages="60" />
 
@@ -94,7 +94,7 @@ settings_xml_server = """<?xml version="1.0" encoding="ISO-8859-1"?>
 </server>
 """
 
-settings_xml_client = """<?xml version="1.0" encoding="ISO-8859-1"?>
+settings_xml_client = """<?xml version="1.0" encoding="UTF-8"?>
 <settings display2d="yes" display3d="no" ping="15000" verbose="6" delays="true" tcptimeout="2000" upgrades="no">
    <delays blind_ante_position="0" position="0" begin_round="0" end_round="0" end_round_last="0" showdown="0" lag="60"/> 
   <screen fullscreen="no" width="1024" height="768"/>
@@ -132,6 +132,24 @@ class PokerClientTestCase(unittest.TestCase):
         else:
             os.system("@MYSQL@ -u @MYSQL_TEST_DBROOT@ -e 'DROP DATABASE IF EXISTS pokernetworktest'")
 
+    def createTourneysSchedules(self):
+        stmts = []
+        stmts.append(
+            'INSERT INTO `tourneys_schedule` (`name`, `description_short`, `description_long`, `players_quota`, `variant`, `betting_structure`, `seats_per_game`, `currency_serial`, `buy_in`, `rake`, `sit_n_go`, `start_time`, `register_time`, `respawn`, `respawn_interval`) ' \
+            'VALUES ("sitngo2", "Sit and Go 2 players, Holdem", "Sit and Go 2 players", "2", "holdem", "level-15-30-no-limit", "2", 1, "300000", "0", "y", "0", "0", "y", "0");'
+        )
+        stmts.append(
+            'INSERT INTO `tourneys_schedule` (`name`, `description_short`, `description_long`, `players_quota`, `variant`, `betting_structure`, `seats_per_game`, `currency_serial`, `buy_in`, `rake`, `sit_n_go`, `breaks_interval`, `rebuy_delay`, `add_on`, `add_on_delay`, `start_time`, `register_time`, `respawn`, `respawn_interval`, `players_min`) ' \
+            'VALUES ("regular1", "Holdem No Limit Freeroll", "Holdem No Limit Freeroll", "1000", "holdem", "level-001", "10", 1, "0", "0", "n", "60", "30", "1", "60", unix_timestamp(now() + INTERVAL 2 MINUTE), unix_timestamp(now() - INTERVAL 1 HOUR), "n", "0", 3);'
+        )
+        
+        if len("@MYSQL_TEST_DBROOT_PASSWORD@") > 0:
+            prefix = "@MYSQL@ -u @MYSQL_TEST_DBROOT@ --password='@MYSQL_TEST_DBROOT_PASSWORD@' -h '@MYSQL_TEST_DBHOST@' -D pokernetworktest -e '%s'"
+        else:
+            prefix = "@MYSQL@ -u @MYSQL_TEST_DBROOT@ -h '@MYSQL_TEST_DBHOST@' -D pokernetworktest -e '%s'"
+        for stmt in stmts:
+            os.system(prefix % stmt)
+
     def setUpServer(self):
         settings = pokernetworkconfig.Config([])
         settings.doc = libxml2.parseMemory(settings_xml_server, len(settings_xml_server))
@@ -141,6 +159,8 @@ class PokerClientTestCase(unittest.TestCase):
         #
         self.service = pokerservice.PokerService(settings)
         self.service.startService()
+        self.createTourneysSchedules()
+        self.service.updateTourneysSchedule()
         factory = pokerservice.IPokerFactory(self.service)
         self.p = reactor.listenTCP(0, factory, interface="127.0.0.1")
         self.port = self.p.getHost().port
@@ -223,7 +243,7 @@ class PokerClientTestCase(unittest.TestCase):
         self.assertEquals(search_output('protocol established') > 0, True)
         clear_all_messages()
         client.sendPacket(PacketPing())
-        self.assertEquals(get_messages(), ['sendPacket: type = PING(5)'])
+        self.assertEquals(get_messages(), ['sendPacket: PING  type = 5 length = 3'])
         clear_all_messages()
         return (client,)
 
@@ -249,7 +269,14 @@ class PokerClientTestCase(unittest.TestCase):
 
     def cashIn(self, client, url, value):
         note = self.service.cashier.currency_client._buildNote(url, value)
-        client.sendPacket(PacketPokerCashIn(serial = client.getSerial(), note = note))
+        (url, bserial, name, value) = note
+        client.sendPacket(PacketPokerCashIn(
+            serial = client.getSerial(),
+            url = url,
+            bserial = bserial,
+            name = name,
+            value = value
+        ))
         client.setPrefix("[Client %d]" % client.getSerial())
         return client.packetDeferred(True, PACKET_ACK)
 
@@ -624,17 +651,15 @@ class PokerClientTestCase(unittest.TestCase):
         return d
 
     def sitngo(self, (client, packet)):
-        client.sendPacket(PacketPokerTableJoin(serial = client.getSerial(),
-                                               game_id = TABLE1))
-        client.sendPacket(PacketPokerSeat(serial = client.getSerial(),
-                                          game_id = TABLE1))
-        client.sendPacket(PacketPokerAutoBlindAnte(serial = client.getSerial(),
-                                                   game_id = TABLE1))
-        client.sendPacket(PacketPokerBuyIn(serial = client.getSerial(),
-                                           game_id = TABLE1,
-                                           amount = 200000))
-        client.sendPacket(PacketPokerSit(serial = client.getSerial(),
-                                         game_id = TABLE1))
+        client.sendPacket(PacketPokerTableJoin(serial = client.getSerial(), game_id = TABLE1))
+        client.sendPacket(PacketPokerSeat(serial = client.getSerial(), game_id = TABLE1))
+        client.sendPacket(PacketPokerAutoBlindAnte(serial = client.getSerial(), game_id = TABLE1))
+        client.sendPacket(PacketPokerBuyIn(
+            serial = client.getSerial(),
+            game_id = TABLE1,
+            amount = 200000
+        ))
+        client.sendPacket(PacketPokerSit(serial = client.getSerial(), game_id = TABLE1))
         return client.packetDeferred(True, PACKET_POKER_SELF_IN_POSITION)
         
     def search_sitngo2(self, (client, packet),):
@@ -937,7 +962,7 @@ class PokerClientTestCase(unittest.TestCase):
 
     #-----------------------------------------------------------------------------
     translateConfigs = [ ('limit-2-4',  
-"""<?xml version="1.0" encoding="ISO-8859-1"?>
+"""<?xml version="1.0" encoding="UTF-8"?>
 <bet xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="bet.xsd" name="2-4 limit" table-stakes="yes" unit="100" buy-in="1000" best-buy-in="6000" max-buy-in="100000000" poker_engine_version="1.3.0">
     <description>Limit 2/4</description>
     <blind small="100" big="200"/>
@@ -951,7 +976,7 @@ class PokerClientTestCase(unittest.TestCase):
 </bet>
 """, 'Limit 2/4', [] ),
     ( 'undescribed' , 
-"""<?xml version="1.0" encoding="ISO-8859-1"?>
+"""<?xml version="1.0" encoding="UTF-8"?>
 <bet xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="bet.xsd" name="2-4 limit" table-stakes="yes" unit="100" buy-in="1000" best-buy-in="6000" max-buy-in="100000000" poker_engine_version="1.3.0">
     <blind small="100" big="200"/>
     <all_in method="side"/> 
@@ -1049,15 +1074,16 @@ class PokerClientTestCase(unittest.TestCase):
         skin.interpret = misInterpretURLforSkin
 
         clear_all_messages()
-        client.handlePlayerInfo(PacketPokerPlayerInfo(name = "test",
-                                                  url = "http://thatisone/",
-                                                  outfit = "Stablize",
-                                                  serial = client.getSerial()))
+        client.handlePlayerInfo(PacketPokerPlayerInfo(
+            name = "test",
+            url = "http://thatisone/",
+            outfit = "Stablize",
+            serial = client.getSerial()
+        ))
         if forceCrash:
-            self.assertEquals(get_messages(), 
-                              ['ERROR *CRITICAL*: PACKET_POKER_PLAYER_INFO: may enter loop packet.url = http://thatisone/\n url = http://thatistwo\n url_check = http://thatisthree\npacket.outfit = Stablize\n outfit = Stablize\n outfit_check = Stablize'])
+            self.assertEquals(get_messages(), ['PACKET_POKER_PLAYER_INFO: may enter loop packet.url = http://thatisone/\n url = http://thatistwo\n url_check = http://thatisthree\npacket.outfit = Stablize\n outfit = Stablize\n outfit_check = Stablize'])
         else:
-            self.assertEquals(get_messages(), ['sendPacket(4) type = POKER_PLAYER_INFO(87) serial = 4 game_id = 0 name = test, url = http://thatistwo, outfit = Stablize  '])
+            self.assertEquals(get_messages(), ['sendPacket: POKER_PLAYER_INFO  type = 87 length = 46 serial = 4 game_id = 0 name = test outfit = Stablize url = http://thatistwo'])
 
         skin.interpret = correctInterpret
         return (client, packet)
@@ -1099,9 +1125,9 @@ class PokerClientTestCase(unittest.TestCase):
                                                   serial = client.getSerial()))
         if forceCrash:
             self.assertEquals(get_messages(), 
-                              ['ERROR *CRITICAL*: PACKET_POKER_PLAYER_INFO: may enter loop packet.url = http://stable/\n url = http://stable/\n url_check = http://stable/\npacket.outfit = OutfitOne\n outfit = OutfitTwo\n outfit_check = OutfitThree'])
+                              ['PACKET_POKER_PLAYER_INFO: may enter loop packet.url = http://stable/\n url = http://stable/\n url_check = http://stable/\npacket.outfit = OutfitOne\n outfit = OutfitTwo\n outfit_check = OutfitThree'])
         else:
-            self.assertEquals(get_messages(), ['sendPacket(4) type = POKER_PLAYER_INFO(87) serial = 4 game_id = 0 name = test, url = http://stable/, outfit = OutfitTwo  '])
+            self.assertEquals(get_messages(), ['sendPacket: POKER_PLAYER_INFO  type = 87 length = 44 serial = 4 game_id = 0 name = test outfit = OutfitTwo url = http://stable/'])
 
         skin.interpret = correctInterpret
         return (client, packet)
@@ -1129,7 +1155,7 @@ class PokerClientTestCase(unittest.TestCase):
         g = Game()
         clear_all_messages()
         client.setPlayerDelay(g, client.getSerial(), 101873)
-        self.assertEquals(get_messages(), [ "WARNING setPlayerDelay for a non-existing player %d" % client.getSerial() ])
+        self.assertEquals(get_messages(), [ "setPlayerDelay for a non-existing player %d" % client.getSerial() ])
         clear_all_messages()
         return (client, packet)
 
@@ -1293,44 +1319,7 @@ class PokerSkinMethodUnitTest(unittest.TestCase):
         self.assertEquals(skin.outfit, "random")
         self.assertEquals(skin.settings, "testing")
 # ------------------------------------------------------
-class PokerClientLogErrorFunctionTestCase(unittest.TestCase):
-
-    timeout = 500
-    
-    # ---------------------------------------------------------------------------
-    def setUp(self):
-        pass
-    # ---------------------------------------------------------------------------
-    def tearDown(self):
-        pass
-    # ---------------------------------------------------------------------------
-    def test00_errLogTest(self):
-        from twisted.python import log as twistedLog
-        from pokernetwork import pokerclient as pc
-
-        saveLogErr = pc.log_err
-
-        global myLogErrorCallCount
-        myLogErrorCallCount = 0
-        def myLogErr(firstArg, secondArg, thirdArg = None):
-            global myLogErrorCallCount
-            myLogErrorCallCount += 1
-            self.assertEquals(firstArg, "FirstOne")
-            self.assertEquals(secondArg, "SecondOne")
-            self.assertEquals(thirdArg, "ThirdOne")
-        pc.log_err  = myLogErr
-
-        self.failIf(twistedLog.error_occurred,
-                    "Twisted Log should not have an error occurred yet")
-
-        pc.err("FirstOne", "SecondOne", thirdArg = "ThirdOne")
-        self.assertEquals(myLogErrorCallCount, 1)
-        self.failUnless(twistedLog.error_occurred,
-                    "Twisted Log should have logged an error occurred")
-
-        pc.log_err = saveLogErr
-# ------------------------------------------------------
-settings_xml_client_noChatNoDelays = """<?xml version="1.0" encoding="ISO-8859-1"?>
+settings_xml_client_noChatNoDelays = """<?xml version="1.0" encoding="UTF-8"?>
 <settings display2d="yes" display3d="no" ping="15000" verbose="6" delays="true" tcptimeout="2000" upgrades="no">
   <screen fullscreen="no" width="1024" height="768"/>
   <name>user1</name>
@@ -1352,7 +1341,7 @@ settings_xml_client_noChatNoDelays = """<?xml version="1.0" encoding="ISO-8859-1
 </settings>
 """
 
-settings_xml_client_delaysWithRoundNoBlindAnte = """<?xml version="1.0" encoding="ISO-8859-1"?>
+settings_xml_client_delaysWithRoundNoBlindAnte = """<?xml version="1.0" encoding="UTF-8"?>
 <settings display2d="yes" display3d="no" ping="15000" verbose="6" delays="true" tcptimeout="2000" upgrades="no">
    <delays position="66" round="42" begin_round="77" end_round="99" end_round_last="0" showdown="0" lag="60"/> 
   <screen fullscreen="no" width="1024" height="768"/>
@@ -1393,7 +1382,7 @@ class PokerClientFactoryUnitMethodCoverageTestCase(unittest.TestCase):
     def tearDown(self): pass
     # ---------------------------------------------------------------------------
     def test00_initWithBadConfig(self):
-        config_xml = """<?xml version="1.0" encoding="ISO-8859-1"?>
+        config_xml = """<?xml version="1.0" encoding="UTF-8"?>
 <nothing/>"""
         config = pokernetworkconfig.Config([])
         config.doc = libxml2.parseMemory(config_xml, len(config_xml))
@@ -1409,7 +1398,7 @@ class PokerClientFactoryUnitMethodCoverageTestCase(unittest.TestCase):
         self.failUnless(caughtIt, "Should have caught an Exception")
     # ---------------------------------------------------------------------------
     def test01_initWithEmptySequence(self):
-        config_xml = """<?xml version="1.0" encoding="ISO-8859-1"?>
+        config_xml = """<?xml version="1.0" encoding="UTF-8"?>
 <sequence>
 </sequence>"""
         config = pokernetworkconfig.Config([])
@@ -1426,7 +1415,7 @@ class PokerClientFactoryUnitMethodCoverageTestCase(unittest.TestCase):
         self.failUnless(caughtIt, "Should have caught an Exception")
     # ---------------------------------------------------------------------------
     def test02_initWithstringValues(self):
-        config_xml = """<?xml version="1.0" encoding="ISO-8859-1"?>
+        config_xml = """<?xml version="1.0" encoding="UTF-8"?>
 <sequence>
 <chips>10 bar</chips>
 </sequence>"""
@@ -1445,7 +1434,7 @@ class PokerClientFactoryUnitMethodCoverageTestCase(unittest.TestCase):
         self.failUnless(caughtIt, "Should have caught an Exception")
     # ---------------------------------------------------------------------------
     def test03_init_configWithProperInts(self):
-        config_xml = """<?xml version="1.0" encoding="ISO-8859-1"?>
+        config_xml = """<?xml version="1.0" encoding="UTF-8"?>
 <sequence>
 <chips>5 200 10 15 20</chips>
 </sequence>"""
@@ -1561,7 +1550,6 @@ def Run():
     suite.addTest(loader.loadClass(PokerClientTestCase))
     suite.addTest(loader.loadClass(PokerClientFactoryTestCase))
     suite.addTest(loader.loadClass(PokerSkinMethodUnitTest))
-    suite.addTest(loader.loadClass(PokerClientLogErrorFunctionTestCase))
     suite.addTest(loader.loadClass(PokerClientFactoryUnitMethodCoverageTestCase))
     return runner.TrialRunner(
         reporter.TextReporter,
